# gort

./: ChangeLog.md  README.md  bot.cabal  bot.hs  gort.cabal  package.yaml
app/: Main.hs
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes
