name: gort
version:        0.1.0.0
description:    Please see the README on GitHub at <https://github.com/githubuser/gort#readme>
homepage:       https://github.com/githubuser/gort#readme
bug-reports:    https://github.com/githubuser/gort/issues
author:         Author name here
maintainer:     example@example.com
copyright:      2020 Author name here
license:        BSD3
license-file:   LICENSE
build-type: Simple

executable bot
  main-is: bot.hs
  build-depends:
      base >=4.7 && <5
    , wuss >=1.1 && <2
    , text
    , websockets >= 0.12 && <1
    , aeson >= 1.4 && <2
